--- a/dest/webapp/index.html
+++ b/dest/webapp/index.html
@@ -13,7 +13,7 @@
 </script>
 </head>
 <body>
-	<form name="uploadForm" action="http://localhost:8080/" method="POST" enctype="multipart/form-data">
+	<form name="uploadForm" action="/" method="POST" enctype="multipart/form-data">
 		<input type="file" name="myfile"/>
 	</form>
 	<input type="button" value="上传" onclick="uploadFile()" /><br/>
