--- a/dest/webapp/index.html
+++ b/dest/webapp/index.html
@@ -17,7 +17,7 @@
 		<input type="file" name="myfile"/>
 	</form>
 	<input type="button" value="上传" onclick="uploadFile()" /><br/>
-	
+	<a href="/monitor.html" target="_blank">去监视屏</a><br/>
 	<a href="/ctlor?script=servmsg" target="_blank">导入ServerMsg数据</a><br/>
 	<a href="/ctlor?script=rebuildtool" target="_blank">更新DevOps工具</a><br/>
 	<a href="http://192.168.1.14/xx/bin/XXGame_20141212.apk" target="_blank">下载XXGame安装包</a>
